--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <h1>Select Your Dashboard Version</h1>
 
-  <a href="index.html">Version 1 – Original Dashboard</a>
+  <a href="index_v1.html">Version 1 – Original Dashboard</a>
   <a href="index_v2.html">Version 2 – Updated Dashboard</a>
 
 </body>
