--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Holiday Gift Agent Dashboard – Versions</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
       --primary: #4361ee;
@@ -172,4 +171,6 @@
     }
     
     .btn-secondary:hover {
-      background-color:
+      background-color: var(--secondary-hover);
+      transform: translateY(-3px);
+      box
