--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       display: grid;
       place-items: center;
       padding: 16px;
-      min-height: 820px; /* bigger, matches your ask */
+      min-height: 820px;
     }
     @media (max-width: 720px){
       .pdf-canvas-wrap{ min-height: 680px; }
@@ -682,8 +682,8 @@ Open the generated email writing to google account directly, and instead of the 
 
   </div>
 
-  <!-- PDF.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.7.76/pdf.min.js"></script>
+  <!-- PDF.js (legacy build to ensure window.pdfjsLib exists on GitHub Pages) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <!-- jsPDF (for prompts download) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
@@ -792,9 +792,11 @@ Open the generated email writing to google account directly, and instead of the 
       });
     })();
 
-    // PDF.js single-page viewer with fit-to-width default
+    // PDF.js single-page viewer (fit-to-width default)
     (function () {
-      const url = "Presentation%20Slides%20-%20Create%20Your%20Own%20AI%20Agent%20with%20h2oGPTe.pdf";
+      const relUrl = "Presentation%20Slides%20-%20Create%20Your%20Own%20AI%20Agent%20with%20h2oGPTe.pdf";
+      const pdfUrl = new URL(relUrl, window.location.href).href;
+
       const canvas = document.getElementById("pdfCanvas");
       const wrap = document.getElementById("pdfCanvasWrap");
       const ctx = canvas.getContext("2d");
@@ -810,21 +812,21 @@ Open the generated email writing to google account directly, and instead of the 
       let pageNum = 1;
       let pageCount = 0;
 
-      let fitScale = 1.0;     // computed fit-to-width
-      let userZoom = 1.0;     // user zoom multiplier
+      let fitScale = 1.0;
+      let userZoom = 1.0;
       let rendering = false;
       let pendingPage = null;
+
+      function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
 
       function setStat() {
         if (!pageCount) pageStat.textContent = "Loading…";
         else pageStat.textContent = "Page " + pageNum + " / " + pageCount;
       }
 
-      function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
-
       async function computeFitScale(page) {
         const base = page.getViewport({ scale: 1 });
-        const availW = Math.max(320, wrap.clientWidth - 32); // padding margin
+        const availW = Math.max(320, wrap.clientWidth - 32);
         const s = availW / base.width;
         return clamp(s, 0.7, 2.2);
       }
@@ -837,7 +839,6 @@ Open the generated email writing to google account directly, and instead of the 
         fitScale = await computeFitScale(page);
 
         const scale = clamp(fitScale * userZoom, 0.6, 3.0);
-
         const viewport = page.getViewport({ scale });
 
         const dpr = window.devicePixelRatio || 1;
@@ -893,32 +894,29 @@ Open the generated email writing to google account directly, and instead of the 
       window.addEventListener("resize", function () {
         if (!pdfDoc) return;
         clearTimeout(resizeTimer);
-        resizeTimer = setTimeout(function () {
-          queueRender(pageNum);
-        }, 140);
+        resizeTimer = setTimeout(function () { queueRender(pageNum); }, 140);
       });
 
-      try{
-        if (!window.pdfjsLib) throw new Error("pdfjsLib not available");
+      setStat();
 
-        pdfjsLib.GlobalWorkerOptions.workerSrc =
-          "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.7.76/pdf.worker.min.js";
-
-        setStat();
-
-        pdfjsLib.getDocument({ url }).promise.then(function (pdf) {
-          pdfDoc = pdf;
-          pageCount = pdf.numPages;
-          setStat();
-          renderPage(pageNum);
-        }).catch(function () {
-          pageStat.textContent = "PDF failed to load.";
-          pdfError.style.display = "block";
-        });
-      }catch(e){
-        pageStat.textContent = "PDF viewer unavailable.";
+      if (!window.pdfjsLib) {
+        pageStat.textContent = "PDF viewer failed to load.";
         pdfError.style.display = "block";
+        return;
       }
+
+      pdfjsLib.GlobalWorkerOptions.workerSrc =
+        "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
+
+      pdfjsLib.getDocument({ url: pdfUrl }).promise.then(function (pdf) {
+        pdfDoc = pdf;
+        pageCount = pdf.numPages;
+        setStat();
+        renderPage(pageNum);
+      }).catch(function () {
+        pageStat.textContent = "PDF failed to load.";
+        pdfError.style.display = "block";
+      });
     })();
   </script>
 </body>
