--- a/index.html
+++ b/index.html
@@ -5,35 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Holiday Gift Agent Dashboard - Versions</title>
 
+  <!-- Brand-leaning fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700;800;900&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
   <style>
     :root{
-      --bg: #0b0f19;
+      /* H2O.ai brand-leaning palette */
+      --sunshine: #FFD200;     /* Sunshine Yellow */
+      --lightgray: #F9F9F9;    /* Light Gray */
+      --black: #000000;
+
+      /* Dark UI base (kept, but tuned to brand accents) */
+      --bg: #0A0C10;
+      --panel: rgba(255,255,255,0.06);
+      --panel-2: rgba(255,255,255,0.08);
       --border: rgba(255,255,255,0.14);
       --text: rgba(255,255,255,0.92);
       --muted: rgba(255,255,255,0.70);
       --shadow: 0 18px 45px rgba(0,0,0,0.35);
 
-      /* Brand-leaning accents */
-      --accent: #ffd200;
-      --accent-2: #00d3ff;
+      --accent: var(--sunshine);
+      --accent-2: rgba(255,210,0,0.28);
 
       --btn: rgba(255,255,255,0.10);
       --btn-hover: rgba(255,255,255,0.16);
       --focus: rgba(255,210,0,0.55);
 
-      --sys-accent: rgba(0,211,255,0.22);
-      --sys-border: rgba(0,211,255,0.34);
+      --sys-bg: rgba(255,210,0,0.16);
+      --sys-border: rgba(255,210,0,0.55);
+
+      --pill-bg: rgba(255,255,255,0.06);
+      --pill-border: rgba(255,255,255,0.16);
+
+      --link-border: rgba(255,255,255,0.16);
+      --link-bg: rgba(255,255,255,0.06);
     }
 
     * { box-sizing: border-box; }
 
     body{
       margin: 0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: "DM Sans", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color: var(--text);
       background:
         radial-gradient(900px 500px at 15% 10%, rgba(255,210,0,0.18), transparent 55%),
-        radial-gradient(800px 450px at 85% 15%, rgba(0,211,255,0.16), transparent 55%),
+        radial-gradient(900px 600px at 80% 30%, rgba(255,210,0,0.10), transparent 60%),
         radial-gradient(900px 600px at 50% 90%, rgba(255,255,255,0.06), transparent 60%),
         var(--bg);
       min-height: 100vh;
@@ -68,7 +86,7 @@
       color: var(--muted);
       user-select: none;
       text-decoration: none;
-      transition: border-color .16s ease, background .16s ease, transform .16s ease;
+      transition: border-color .16s ease, background .16s ease, transform .16s ease, color .16s ease;
     }
     .badge:hover{
       background: rgba(255,255,255,0.06);
@@ -89,7 +107,7 @@
       padding: 26px 22px 22px;
       border-radius: 18px;
       border: 1px solid var(--border);
-      background: linear-gradient(180deg, rgba(255,255,255,0.07), rgba(255,255,255,0.04));
+      background: linear-gradient(180deg, rgba(255,255,255,0.075), rgba(255,255,255,0.04));
       box-shadow: var(--shadow);
       backdrop-filter: blur(12px);
     }
@@ -99,6 +117,7 @@
       font-size: clamp(26px, 3.2vw, 38px);
       line-height: 1.15;
       letter-spacing: -0.02em;
+      font-weight: 900;
     }
 
     .subtitle{
@@ -106,7 +125,8 @@
       color: var(--muted);
       font-size: 15.5px;
       line-height: 1.55;
-      max-width: 72ch;
+      max-width: 78ch;
+      font-weight: 500;
     }
 
     .grid{
@@ -147,6 +167,7 @@
       align-items: center;
       justify-content: space-between;
       gap: 10px;
+      font-weight: 800;
     }
 
     .pill{
@@ -155,19 +176,20 @@
       gap: 8px;
       padding: 6px 10px;
       border-radius: 999px;
-      border: 1px solid rgba(255,255,255,0.16);
-      background: rgba(255,255,255,0.06);
+      border: 1px solid var(--pill-border);
+      background: var(--pill-bg);
       color: var(--muted);
       font-size: 12px;
       white-space: nowrap;
+      font-weight: 700;
     }
 
     .pill .mini-dot{
       width: 8px;
       height: 8px;
       border-radius: 999px;
-      background: var(--accent-2);
-      box-shadow: 0 0 0 5px rgba(0,211,255,0.12);
+      background: var(--accent);
+      box-shadow: 0 0 0 5px rgba(255,210,0,0.12);
     }
 
     .card p{
@@ -176,6 +198,7 @@
       font-size: 13.5px;
       line-height: 1.5;
       min-height: 42px;
+      font-weight: 500;
     }
 
     .btn{
@@ -191,7 +214,7 @@
       background: var(--btn);
       color: var(--text);
       text-decoration: none;
-      font-weight: 650;
+      font-weight: 850;
       letter-spacing: 0.01em;
       transition: transform .16s ease, background .16s ease, border-color .16s ease, box-shadow .16s ease;
       outline: none;
@@ -244,6 +267,7 @@
       margin: 0;
       font-size: 16px;
       letter-spacing: -0.01em;
+      font-weight: 900;
     }
 
     .small{
@@ -251,6 +275,7 @@
       color: var(--muted);
       font-size: 13px;
       line-height: 1.45;
+      font-weight: 500;
     }
 
     .slides-actions{
@@ -265,25 +290,26 @@
       gap: 10px;
       padding: 10px 12px;
       border-radius: 12px;
-      border: 1px solid rgba(255,255,255,0.16);
-      background: rgba(255,255,255,0.06);
+      border: 1px solid var(--link-border);
+      background: var(--link-bg);
       color: var(--text);
       text-decoration: none;
-      font-weight: 650;
+      font-weight: 850;
       font-size: 13px;
       transition: transform .16s ease, background .16s ease, border-color .16s ease, box-shadow .16s ease;
       cursor: pointer;
       white-space: nowrap;
+      font-family: "DM Sans", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
     .link-btn:hover{
       transform: translateY(-1px);
-      background: rgba(255,255,255,0.09);
+      background: rgba(255,255,255,0.10);
       border-color: rgba(255,255,255,0.24);
-      box-shadow: 0 0 0 1px rgba(0,211,255,0.14) inset;
+      box-shadow: 0 0 0 1px rgba(255,210,0,0.16) inset;
     }
 
-    /* Centered CTA below the version cards */
+    /* Centered CTA below the version cards (brand yellow) */
     .cta-row{
       margin-top: 14px;
       display: flex;
@@ -295,18 +321,21 @@
       gap: 12px;
       padding: 12px 14px;
       border-radius: 14px;
-      border: 1px solid rgba(255,210,0,0.50);
-      background:
-        linear-gradient(180deg, rgba(255,210,0,0.18), rgba(255,255,255,0.06));
-      font-weight: 900;
+      border: 1px solid rgba(255,210,0,0.75);
+      background: linear-gradient(180deg, rgba(255,210,0,0.38), rgba(255,255,255,0.06));
+      font-weight: 950;
       letter-spacing: 0.01em;
-      box-shadow: 0 16px 40px rgba(0,0,0,0.22);
+      box-shadow: 0 16px 40px rgba(0,0,0,0.22), 0 0 0 1px rgba(255,210,0,0.22) inset;
+      color: rgba(255,255,255,0.98);
+    }
+    .cta-wide .arrow{
+      background: rgba(0,0,0,0.18);
+      border-color: rgba(255,255,255,0.16);
     }
     .cta-wide:hover{
-      background:
-        linear-gradient(180deg, rgba(255,210,0,0.26), rgba(255,255,255,0.08));
-      border-color: rgba(255,210,0,0.68);
-      box-shadow: 0 0 0 1px rgba(255,210,0,0.22) inset, 0 16px 40px rgba(0,0,0,0.22);
+      background: linear-gradient(180deg, rgba(255,210,0,0.48), rgba(255,255,255,0.08));
+      border-color: rgba(255,210,0,0.92);
+      box-shadow: 0 0 0 1px rgba(255,210,0,0.25) inset, 0 16px 40px rgba(0,0,0,0.22);
     }
 
     .disclaimer{
@@ -317,6 +346,7 @@
       line-height: 1.5;
       font-style: italic;
       text-align: center;
+      font-weight: 500;
     }
 
     /* Video */
@@ -385,6 +415,7 @@
       color: var(--muted);
       font-size: 13px;
       white-space: nowrap;
+      font-weight: 700;
     }
     .pdf-canvas-wrap{
       display: grid;
@@ -410,6 +441,7 @@
       border-top: 1px solid rgba(255,255,255,0.10);
       font-size: 13px;
       line-height: 1.45;
+      font-weight: 600;
     }
 
     /* Prompts */
@@ -428,13 +460,13 @@
       justify-content: space-between;
       gap: 12px;
       color: var(--text);
-      font-weight: 650;
+      font-weight: 900;
       font-size: 13.5px;
     }
     details.prompt summary::-webkit-details-marker{ display: none; }
     .prompt-meta{
       color: var(--muted);
-      font-weight: 600;
+      font-weight: 800;
       font-size: 12px;
       white-space: nowrap;
     }
@@ -448,6 +480,7 @@
       color: rgba(255,255,255,0.88);
       font-size: 12.5px;
       line-height: 1.45;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     }
     .prompt-actions{
       display: flex;
@@ -456,26 +489,19 @@
       margin-top: 10px;
     }
 
-    /* System prompt styling (Slide 23) */
+    /* System prompt styling (Slide 23) should be yellow */
     details.prompt.system{
       border-color: var(--sys-border);
-      background: linear-gradient(180deg, rgba(0,211,255,0.14), rgba(255,255,255,0.03));
-      box-shadow: 0 0 0 1px rgba(0,211,255,0.10) inset, 0 14px 38px rgba(0,0,0,0.22);
+      background: linear-gradient(180deg, rgba(255,210,0,0.22), rgba(255,255,255,0.03));
+      box-shadow: 0 0 0 1px rgba(255,210,0,0.12) inset, 0 14px 38px rgba(0,0,0,0.22);
     }
     details.prompt.system summary{
       color: rgba(255,255,255,0.98);
     }
     details.prompt.system pre.code{
-      border-color: rgba(0,211,255,0.28);
-      background: rgba(0,211,255,0.12);
-      box-shadow: 0 0 0 1px rgba(0,211,255,0.10) inset;
-    }
-
-    .footer{
-      margin-top: 18px;
-      color: rgba(255,255,255,0.62);
-      font-size: 12.5px;
-      line-height: 1.5;
+      border-color: rgba(255,210,0,0.40);
+      background: rgba(255,210,0,0.14);
+      box-shadow: 0 0 0 1px rgba(255,210,0,0.12) inset;
     }
   </style>
 </head>
@@ -532,7 +558,8 @@
       </div>
 
       <div class="cta-row">
-        <a class="link-btn cta-wide" href="https://h2ogpte.genai.h2o.ai" target="_blank" rel="noopener">
+        <!-- Important: keep exact domain + trailing slash -->
+        <a class="link-btn cta-wide" href="https://h2ogpte.genai.h2o.ai/" target="_blank" rel="noopener">
           Launch Enterprise h2oGPTe (Freemium) <span class="arrow">↗</span>
         </a>
       </div>
